--- a/src/ApiPagination.Library/ApiPagination.Library.csproj
+++ b/src/ApiPagination.Library/ApiPagination.Library.csproj
@@ -2,6 +2,19 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <LangVersion>11</LangVersion>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <Nullable>false</Nullable>
+        <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    </PropertyGroup>
+    
+    <PropertyGroup>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageId>ApiPagination</PackageId>
+        <Version>v0.1.0</Version>
+        <Authors>Damien</Authors>
+        <Company>Septeo Genapi</Company>
     </PropertyGroup>
 
 </Project>
